# invoice-categorization

./: .gitignore  LICENSE  README.md  db_migration.ipynb  docker-compose.yml  requirements.txt  search_embedding.ipynb
backend/: Dockerfile  env.sample  requirements.txt  server.py
backend/routes/: files.py  users.py
backend/types/: errors.py
backend/utils/: args.py  batch.py  excel.py  filedb.py  jwt.py  userdb.py
backend/utils/db/: dynamo.py  filedb.py  uploader.py  userdb.py
backend/utils/model/: model.py
design/: api_design.md  model.md  search_flow.ditaa  table_design.md
frontend/: Cargo.toml  Dockerfile  env.sample  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
frontend/public/: env.js  index.html
frontend/src/: App.tsx  index.tsx  main.rs
frontend/src/api/: user.ts
frontend/src/components/: FileUpload.tsx  Header.tsx
frontend/src/components/file/: FileUpload.tsx  Files.tsx
frontend/src/components/user/: Login.tsx  Profile.tsx
frontend/src/contexts/: UserContext.tsx  WebSocketContext.tsx
frontend/src/pages/: Home.tsx  User.tsx
frontend/src/types/: user.ts
model/: env.sample  explore.ipynb  requirements.txt  search_embedding.ipynb  train.ipynb
model/clean_data/: Cargo.toml
model/clean_data/src/: main.rs
model/process_data/: add_search.py  excel_csv.py  modify_data.ipynb  vendor_similarity.ipynb
model/process_data/utils/: __init__.py  utils.py
