[package]
name = "file_upload"
version = "0.1.0"
authors = ["Sachin Iyer <sachinjiyer@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
js-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
base64 = "0.21.2"
gloo = "0.8"
dotenv = "0.15.0"
gloo-net = "0.3.0"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]
